[workspace]
members = [
  ".",
  "jmdict-enums",
  "jmdict-traverse",
]

[package]
name = "jmdict"
version = "2.0.0"
authors = [
  # implementation
  "Stefan Majewsky <majewsky@gmx.net>",
  # database contents
  "JMdict Contributors",
]
edition = "2018"
description = "The free Japanese dictionary database JMdict, pre-digested for use in Rust libs and apps."
documentation = "https://docs.rs/jmdict/"
readme = "README.md"
homepage = "https://github.com/majewsky/rust-jmdict"
license = "Apache-2.0"
keywords = [ "jmdict", "edict", "edrdg", "japanese", "dictionary" ]

exclude = [
  "data/*",
  "with-local-entrypack.sh"
]

[dependencies]
align-data = "^0.1.0"
jmdict-enums = { path = "jmdict-enums", version = "2.0.0" }

[build-dependencies]
jmdict-enums = { path = "jmdict-enums", version = "2.0.0" }
jmdict-traverse = { path = "jmdict-traverse", version = "2.0.0" }

[dev-dependencies]
jmdict-traverse = { path = "jmdict-traverse", version = "2.0.0" }

[features]
default = [
  "translations-eng",
]
full = [
  "scope-uncommon",
  "scope-archaic",
  "translations-eng",
  "translations-dut",
  "translations-fre",
  "translations-ger",
  "translations-hun",
  "translations-rus",
  "translations-slv",
  "translations-spa",
  "translations-swe",
]

scope-uncommon   = []
scope-archaic    = ["jmdict-enums/scope-archaic"]
translations-eng = ["jmdict-enums/translations-eng"]
translations-dut = ["jmdict-enums/translations-dut"]
translations-fre = ["jmdict-enums/translations-fre"]
translations-ger = ["jmdict-enums/translations-ger"]
translations-hun = ["jmdict-enums/translations-hun"]
translations-rus = ["jmdict-enums/translations-rus"]
translations-slv = ["jmdict-enums/translations-slv"]
translations-spa = ["jmdict-enums/translations-spa"]
translations-swe = ["jmdict-enums/translations-swe"]

# WARNING: These produce a broken build. Read the module-level docs before proceeding.
db-empty = []
db-minimal = []

[package.metadata.docs.rs]
all-features = true
