[package]
name = "jmdict-traverse"
version = "0.1.0"
authors = ["Stefan Majewsky <majewsky@gmx.net>"]
edition = "2018"
description = "Build system support for the jmdict crate. Do not import directly."
readme = "README.md"
homepage = "https://github.com/majewsky/rust-jmdict/tree/main/jmdict-traverse"
license = "Apache-2.0"

[dependencies]
jmdict-enums = { path = "../jmdict-enums", version = "0.1.0" }
directories = "^3"
hex-literal = "^0.3"
libflate = "^1"
sha2 = "^0.9"
json = "^0.12"
